[metadata]
name = PyUnitTest-MJ
version = 0.0.1
author = Mohammed Jassim
author_email = mohammedjassim.jasmin@gmail.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8