[metadata]
name = PyUnitTest-MJ
version = 0.0.3
author = Mohammed Jassim
author_email = mohammedjassim.jasmin@gmail.com
description = Python Unit Test Utilities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jassim-jasmin/python_unit_test
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8